removed horizontal scrolling for mobile devices -- fixed bg-wave issues due to position: relative

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ html,
 body {
   width: auto !important;
   overflow-x: hidden !important;
+  position: relative;
 }
 
 body {
@@ -96,6 +97,22 @@ code {
 
 .ptop {
   padding-top: 30px;
+}
+
+.wave {
+  height: 50%;
+}
+
+@media only screen and (max-width: 992px) {
+  .wave {
+    height: 40%;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .wave {
+    height: 30%;
+  }
 }
 
 /* 768px wide or less */
